Se modifico la salida en pantalla y se corrigio el archivo makefile

--- a/f90trj/Makefile
+++ b/f90trj/Makefile
@@ -6,8 +6,11 @@ SOURCE= trj_netcdf.f90 interpol.f90 trj_mod.f90 ptotheta.f90 date_conv.f90 trj_w
 F95=gfortran
 
 FFLAGS=-fdefault-real-8 -fbounds-check -O2
-LIBS= -L../netcdf/lib -lnetcdf
-INCLUDES = -I../netcdf/include
+#LIBS= -L../netcdf/lib -lnetcdf
+#INCLUDES = -I../netcdf/include
+LIBS= -lnetcdff
+INCLUDES = -I "C:\cygwin64\usr\include" 
+
 
 all : $(SOURCE)
 	$(F95)  $(FFLAGS) $(INCLUDES) $(SOURCE) $(LIBS)  -o $(PROGRAM) 
